# Relation-Constraint-Dialog

./: .gitignore  CMakeLists.txt  CMakePresets.json  README-jp.md  README.md
docs/Doxygen/: Doxyfile  header.html  mainpage.md
src/: CMakeLists.txt  RelationConstraintDialogConfig.ini  RelationConstraintDialogRegister.cpp  RelationConstraintDialog_register.cpp
src/ConfigReadWriter/: ConfigReadWriter.cpp  ConfigReadWriter.h  RelationDialogConfig.h
src/CustomEventFilters/: CustomEventFilters.cpp  CustomEventFilters.h
src/Dialogs/: PreferencesDialog.cpp  PreferencesDialog.ui  SearchDialog.cpp
src/Dialogs/CustomWidgets/: ConfigPathLineEdit.cpp  ConfigPathLineEdit.h  SearchBoxLineEdit.cpp  SearchBoxLineEdit.h
src/GLHooks/: GLHooks.cpp  GLHooks.h
src/PreferencesDialog/: PreferencesDialog.cpp  PreferencesDialog.h  PreferencesDialog.ui
src/RelationDialogManager/: RelationDialogManager.cpp  RelationDialogManager.h
src/SearchDialog/: CustomLineEdit.cpp  CustomLineEdit.h  SearchDialog.cpp  SearchDialog.h  SearchDialog.ui
src/SearchDialog/CustomWidgets/: SettingsButton.cpp  SettingsButton.h
src/SearchDialog/PreferencesDialog/: PreferencesDialog.cpp  PreferencesDialog.h  PreferencesDialog.ui
src/SuggestionProvider/: SuggestionProvider.cpp  SuggestionProvider.h
src/Utility/: Utility.cpp  Utility.h
